--- a/package.json
+++ b/package.json
@@ -5,22 +5,18 @@
   "main": "index.js",
   "scripts": {
     "init-project": "npm install && npm-run-all init:*",
-
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "cd . > README.md && cd . > index.html &&  cd . > sass/style.scss && cd . > js/script.js",
     "init:gitignore": "curl -x \"http://172.28.76.8:3128\" https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-
     "test": "npm-run-all test:*",
     "test:html": "html-validate *.html",
-
+    "test:js": "eslint js/",
     "build": "npm-run-all build:* test",
     "build:sass": "sass --style=compressed --no-source-map sass:css",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
-
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
-    
-    "watch": "npm-run-all build build-dev -p watch:*",
+    "watch": "npm-run-all build:* build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
@@ -30,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "browser-sync": "^2.28.3",
+    "eslint": "^8.36.0",
     "html-validate": "^7.13.2",
     "mkdirp": "^2.1.5",
     "npm-run-all": "^4.1.5",
