--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
     "watch": "npm-run-all build:* build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
-    "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
+    "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev",
+    "watch-eslint": "esw --watch --changed --clear"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "autoprefixer": "^10.2.4",
     "browser-sync": "^2.28.3",
     "eslint": "^8.36.0",
+    "eslint-watch": "^8.0.0",
     "html-validate": "^7.13.2",
     "mkdirp": "^2.1.5",
     "npm-run-all": "^4.1.5",
