--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "npm-run-all test:*",
     "test:html": "html-validate *.html",
     "test:js": "eslint js/",
+    "test:scss": "stylelint sass/",
     "build": "npm-run-all build:* test",
     "build:sass": "sass --style=compressed --no-source-map sass:css",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
@@ -29,12 +30,16 @@
     "browser-sync": "^2.28.3",
     "eslint": "^8.36.0",
     "eslint-watch": "^8.0.0",
+    "esw": "^0.15.0",
     "html-validate": "^7.13.2",
     "mkdirp": "^2.1.5",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "stylelint": "^15.2.0",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-scss": "^4.5.0"
   }
 }
